@@ -386,3 +386,6 @@
 2018-06-19 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 9:0:6.
 	* Incremented the package version to 1.6.0.
+2018-06-20 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in webhostd(8) that caused wifi connections to be
+	incompletely removed.
